crates/arteziac/tests/snapshots/resolve__block_local_invisible_after.snap
---
source: crates/arteziac/tests/resolve.rs
expression: "check(\"func f() { if true { let t = 1; }\\n let u = t; }\")"
---
def 0: Func `f` @ 5..6
def 1: Local `t` @ 25..26
def 2: Local `u` @ 39..40
--- parse diagnostics: 0
--- resolve diagnostics ---
Error @ 43..44: cannot find `t` in this scope
