crates/arteziac/tests/snapshots/resolve__duplicate_same_scope.snap
---
source: crates/arteziac/tests/resolve.rs
expression: "check(\"func f() { let x = 1; let x = 2; let y = x; }\")"
---
def 0: Func `f` @ 5..6
def 1: Local `x` @ 15..16
def 2: Local `y` @ 37..38
use `x` (node 4) -> def 1
--- parse diagnostics: 0
--- resolve diagnostics ---
Error @ 26..27: `x` is already defined in this scope
