crates/arteziac/tests/snapshots/resolve__for_var_scoping.snap
---
source: crates/arteziac/tests/resolve.rs
expression: "check(\"func f() { for i in 0 .. i { let a = i; }\\n let b = i; }\")"
---
def 0: Func `f` @ 5..6
def 1: Local `i` @ 15..16
def 2: Local `a` @ 33..34
def 3: Local `b` @ 47..48
use `i` (node 3) -> def 1
--- parse diagnostics: 0
--- resolve diagnostics ---
Error @ 25..26: cannot find `i` in this scope
Error @ 51..52: cannot find `i` in this scope
