crates/arteziac/tests/snapshots/resolve__import_introduces_name.snap
---
source: crates/arteziac/tests/resolve.rs
expression: "check(\"import std::io;\\nfunc f() { io(); }\")"
---
def 0: Import `io` @ 12..14
def 1: Func `f` @ 21..22
use `io` (node 1) -> def 0
--- parse diagnostics: 0
--- resolve diagnostics ---
