crates/arteziac/tests/snapshots/resolve__import_undefined_function.snap
---
source: crates/arteziac/tests/resolve.rs
expression: "check(\"import std::io;\\nfunc f() { io(); }\")"
---
def 0: Func `f` @ 21..22
--- parse diagnostics: 0
--- resolve diagnostics ---
Error @ 27..29: cannot find `io` in this scope
