crates/arteziac/tests/snapshots/resolve__poison_zero_width_names.snap
---
source: crates/arteziac/tests/resolve.rs
expression: "check(\"func f() { let = 5; let ok = 1; }\")"
---
def 0: Func `f` @ 5..6
def 1: Local `ok` @ 24..26
--- parse diagnostics: 1
--- resolve diagnostics ---
