crates/arteziac/tests/snapshots/resolve__undefined_variable.snap
---
source: crates/arteziac/tests/resolve.rs
expression: "check(\"func f() { let a = missing; }\")"
---
def 0: Func `f` @ 5..6
def 1: Local `a` @ 15..16
--- parse diagnostics: 0
--- resolve diagnostics ---
Error @ 19..26: cannot find `missing` in this scope
