crates/arteziac/tests/snapshots/resolve__while_body_scopes.snap
---
source: crates/arteziac/tests/resolve.rs
expression: "check(\"func f() { while true { let t = 1; }\\n let u = t;}\")"
---
def 0: Func `f` @ 5..6
def 1: Local `t` @ 28..29
def 2: Local `u` @ 42..43
--- parse diagnostics: 0
--- resolve diagnostics ---
Error @ 46..47: cannot find `t` in this scope
